--- a/beaver_scavenger_hunt/pubspec.yaml
+++ b/beaver_scavenger_hunt/pubspec.yaml
@@ -17,6 +17,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  google_maps_flutter: ^0.5.25+3
+  location: ^3.0.2
   flutter:
     sdk: flutter
 
