--- a/beaver_scavenger_hunt/.gitignore
+++ b/beaver_scavenger_hunt/.gitignore
@@ -29,10 +29,12 @@
 .pub-cache/
 .pub/
 /build/
-/android/app/google-service.json
+./android/app/google-service.json
 
 # Web related
 lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+#test
