--- a/beaver_scavenger_hunt/pubspec.yaml
+++ b/beaver_scavenger_hunt/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  camera: ^0.5.7+4
+  gallery_saver: ^2.0.1
+  path: ^1.6.4
+  path_provider: ^1.6.5
 
 dev_dependencies:
   flutter_test:
