--- a/beaver_scavenger_hunt/android/app/build.gradle
+++ b/beaver_scavenger_hunt/android/app/build.gradle
@@ -45,6 +45,7 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -66,4 +67,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
 }
