--- a/beaver_scavenger_hunt/pubspec.yaml
+++ b/beaver_scavenger_hunt/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.15.5+3
   firebase_storage: ^3.1.5
+  cloud_firestore: ^0.13.4+1
   google_sign_in: ^4.0.4
 
 dev_dependencies:
