--- a/beaver_scavenger_hunt/pubspec.yaml
+++ b/beaver_scavenger_hunt/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   gallery_saver: ^2.0.1
   path: ^1.6.4
   path_provider: ^1.6.5
+  video_player: ^0.10.8+1
 
 dev_dependencies:
   flutter_test:
