--- a/beaver_scavenger_hunt/pubspec.yaml
+++ b/beaver_scavenger_hunt/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   camera: ^0.5.7+4
+  firebase_storage: ^3.1.5
   gallery_saver: ^2.0.1
   path: ^1.6.4
   path_provider: ^1.6.5
