--- a/beaver_scavenger_hunt/pubspec.yaml
+++ b/beaver_scavenger_hunt/pubspec.yaml
@@ -18,6 +18,7 @@ environment:
 
 dependencies:
   google_maps_flutter: ^0.5.25+3
+  dropdown_formfield: ^0.1.2
   location: ^3.0.2
   flutter:
     sdk: flutter
