--- a/beaver_scavenger_hunt/pubspec.yaml
+++ b/beaver_scavenger_hunt/pubspec.yaml
@@ -66,11 +66,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+   - family: Open Sans
+     fonts:
+       - asset: fonts/OpenSans-Regular.ttf
+       - asset: fonts/OpenSans-Bold.ttf
+         weight: 700
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
