--- a/beaver_scavenger_hunt/pubspec.yaml
+++ b/beaver_scavenger_hunt/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path: ^1.6.4
   path_provider: ^1.6.5
   video_player: ^0.10.8+1
+  swipedetector: ^1.2.0
 
 dev_dependencies:
   flutter_test:
