--- a/beaver_scavenger_hunt/.gitignore
+++ b/beaver_scavenger_hunt/.gitignore
@@ -30,6 +30,7 @@
 .pub/
 /build/
 ./android/app/google-service.json
+./android/key.properties
 
 # Web related
 lib/generated_plugin_registrant.dart
