--- a/beaver_scavenger_hunt/android/app/src/debug/AndroidManifest.xml
+++ b/beaver_scavenger_hunt/android/app/src/debug/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.beaver_scavenger_hunt">
+    package="com.oregonstate.beaver_scavenger_hunt">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
