Jake fixed admin screen and added temp skip clue button

--- a/beaver_scavenger_hunt/android/app/build.gradle
+++ b/beaver_scavenger_hunt/android/app/build.gradle
@@ -18,6 +18,7 @@ if (flutterVersionCode == null) {
 
 def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
+    //flutterVersionName = '1.0'
     flutterVersionName = '1.0-demo'
 }
 
@@ -53,6 +54,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
+    
     signingConfigs {
        release {
            keyAlias keystoreProperties['keyAlias']
