--- a/beaver_scavenger_hunt/android/app/build.gradle
+++ b/beaver_scavenger_hunt/android/app/build.gradle
@@ -13,13 +13,13 @@ if (flutterRoot == null) {
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
-    flutterVersionCode = '4'
+    flutterVersionCode = '5'
 }
 
 def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
     //flutterVersionName = '1.0'
-    flutterVersionName = '1.0-demo'
+    flutterVersionName = '1.0-final'
 }
 
 apply plugin: 'com.android.application'
